[package]
name = "rss_feed"
version = "0.1.0"
authors = ["Julianne Natalie Stingray <flat.bartender@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.8"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.0"
hyper = "0.12"
lazy_static = "1.3"
futures = "0.1"
hotwatch = "0.4"
log = "0.4"
pretty_env_logger = "0.3"
